--- a/index.html
+++ b/index.html
@@ -407,74 +407,76 @@
         </div>
     </div>
 
-<!-- Contact Page -->
-<section style="background-color: rgb(68, 70, 73);" class="py-16">
-    <div class="container mx-auto">
-        <h1 class="text-5xl font-bold text-white text-center mb-8">Contact us for a
-            free marketing consultation:</h1>
-        <p class="lg:w-2/3 mx-auto leading-relaxed text-lg text-white text-center">Do you want to know what we could
-            do for you? Fill out the form and let's get acquainted. No strings attached, no annoying sales pitch,
-            we're both too busy for that. <br><br>
+    <!-- Contact Page -->
+    <section style="background-color: rgb(68, 70, 73);" class="py-16">
+        <div class="container mx-auto">
+            <h1 class="text-5xl font-bold text-white text-center mb-8">Contact us for a
+                free marketing consultation:</h1>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-lg text-white text-center">Do you want to know what we could
+                do for you? Fill out the form and let's get acquainted. No strings attached, no annoying sales pitch,
+                we're both too busy for that. <br><br>
 
-        </p>
-        <div class="lg:w-1/2 md:w-2/3 mx-auto">
-            <div class="flex flex-wrap -m-2">
-                <form action="https://api.web3forms.com/submit" method="POST" class="w-full">
-                    <input type="hidden" name="access_key" value="d4cb0626-d548-405e-a942-7b848a16f8d8">
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="name" class="leading-7 text-sm text-white">Name</label>
-                        <input type="text" id="name" name="name"
-                            class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
-                    </div>
-                </div>
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="email" class="leading-7 text-sm text-white">Email</label>
-                        <input type="email" id="email" name="email"
-                            class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
-                    </div>
-                </div>
+            </p>
+            <div class="lg:w-1/2 md:w-2/3 mx-auto">
+                <div class="flex flex-wrap -m-2">
+                    <form action="https://api.web3forms.com/submit" method="POST" class="w-full">
+                        <input type="hidden" name="access_key" value="d4cb0626-d548-405e-a942-7b848a16f8d8">
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="name" class="leading-7 text-sm text-white">Name</label>
+                                <input type="text" id="name" name="name"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
+                            </div>
+                        </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="email" class="leading-7 text-sm text-white">Email</label>
+                                <input type="email" id="email" name="email"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
+                            </div>
+                        </div>
 
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="company" class="leading-7 text-sm text-white">Company</label>
-                        <input type="text" id="company" name="company"
-                            class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
-                    </div>
-                </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="company" class="leading-7 text-sm text-white">Company</label>
+                                <input type="text" id="company" name="company"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
+                            </div>
+                        </div>
 
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="telephone" class="leading-7 text-sm text-white">Telephone</label>
-                        <input type="text" id="telephone" name="telephone"
-                            class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
-                    </div>
-                </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="telephone" class="leading-7 text-sm text-white">Telephone</label>
+                                <input type="text" id="telephone" name="telephone"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
+                            </div>
+                        </div>
 
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="question" class="leading-7 text-sm text-white">Most Important Question</label>
-                        <input type="text" id="question" name="question"
-                            class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
-                    </div>
-                </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="question" class="leading-7 text-sm text-white">Most Important
+                                    Question</label>
+                                <input type="text" id="question" name="question"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-black focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out shadow-md">
+                            </div>
+                        </div>
 
-                <div class="p-2 w-full">
-                    <div class="relative">
-                        <label for="message" class="leading-7 text-sm text-white">Message</label>
-                        <textarea id="message" name="message" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
-                    </div>
-                </div>
+                        <div class="p-2 w-full">
+                            <div class="relative">
+                                <label for="message" class="leading-7 text-sm text-white">Message</label>
+                                <textarea id="message" name="message"
+                                    class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 h-32 text-base outline-none text-gray-700 py-1 px-3 resize-none leading-6 transition-colors duration-200 ease-in-out"></textarea>
+                            </div>
+                        </div>
 
-                <div class="p-2 w-full text-center">
-                    <button type="button" class="btn2 mt-8">SEND</button>
-                </div>
+                        <div class="p-2 w-full text-center">
+                            <button class="btn2 mt-8">SEND</button>
+                        </div>
 
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
 
@@ -486,10 +488,11 @@
 
     <!-- Small transparent arrow -->
     <div id="scroll-to-top" class="fixed bottom-5 left-5 z-50 hidden">
-        <button class="bg-transparent border-none text-white text-3xl">
+        <button type="reset" class="bg-transparent border-none text-white text-3xl">
             <i class="fas fa-arrow-up"></i>
         </button>
     </div>
+
 
 
     <!-- Include Font Awesome for hamburger icon -->
@@ -599,7 +602,7 @@
         /* Apply animation to paragraphs and headings inside boxes */
         .icon-box h2,
         .icon-box p {
-            animation: slideIn 3.5s ease forwards;
+            animation: slideIn 5.5s ease forwards;
         }
 
         /* Define CSS animation */
