--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- Include Font Awesome for hamburger icon -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
         /* Custom styles */
         .nav-link {
@@ -223,10 +225,10 @@
             </button>
             <ul class="flex space-x-8 hidden lg:flex"> <!-- Hide the list on small screens -->
                 <li><a href="#" class="nav-link">Home</a></li>
-                <li><a href="#" class="nav-link">About</a></li>
+                <li><a href="ProfsAbout.html" class="nav-link">About</a></li>
                 <li><a href="#" class="nav-link">Blog</a></li>
-                <li><a href="#" class="nav-link">Contact</a></li>
-                <li><a href="#" class="nav-link">Stuff</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+                <!-- <li><a href="#" class="nav-link">Stuff</a></li> -->
             </ul>
         </nav>
     </header>
@@ -237,10 +239,10 @@
             <button class="close-btn">&times;</button>
             <ul class="flex flex-col">
                 <li class="dropdown-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="dropdown-item"><a href="#" class="nav-link">About</a></li>
+                <li class="dropdown-item"><a href="ProfsAbout.html" class="nav-link">About</a></li>
                 <li class="dropdown-item"><a href="#" class="nav-link">Blog</a></li>
-                <li class="dropdown-item"><a href="#" class="nav-link">Contact</a></li>
-                <li class="dropdown-item"><a href="#" class="nav-link">Stuff</a></li>
+                <li class="dropdown-item"><a href="#contact" class="nav-link">Contact</a></li>
+                <!-- <li class="dropdown-item"><a href="#" class="nav-link">Stuff</a></li> -->
             </ul>
         </div>
     </div>
@@ -408,7 +410,7 @@
     </div>
 
     <!-- Contact Page -->
-    <section style="background-color: rgb(68, 70, 73);" class="py-16">
+    <section  id="contact" style="background-color: rgb(68, 70, 73);" class="py-16">
         <div class="container mx-auto">
             <h1 class="text-5xl font-bold text-white text-center mb-8">Contact us for a
                 free marketing consultation:</h1>
@@ -480,11 +482,23 @@
 
 
 
-    <!-- footer -->
     <footer class="bg-black py-12 text-white text-center">
         <h2 class="text-lg font-bold">Cookies & Privacy</h2>
+        <div class="flex justify-center items-center mt-4 space-x-4">
+            <!-- Facebook Icon -->
+            <a href="https://www.facebook.com/profile.php?id=61557469201532&mibextid=ZbWKwL" class="text-white hover:text-blue-500">
+                <i class="fab fa-facebook-f text-xl"></i>
+            </a>
+            <!-- Instagram Icon -->
+            <a href="https://www.instagram.com/?hl=en" class="text-white hover:text-pink-500">
+                <i class="fab fa-instagram text-xl"></i>
+            </a>
+            <!-- Add more social media icons as needed -->
+        </div>
         <img src="20240318_142023_0000.webp" alt="Logo" class="mx-auto mt-4" style="max-width: 200px;">
     </footer>
+    
+    
 
     <!-- Small transparent arrow -->
     <div id="scroll-to-top" class="fixed bottom-5 left-5 z-50 hidden">
