--- a/ProfsAbout.html
+++ b/ProfsAbout.html
@@ -146,9 +146,9 @@
     <div class="container">
         <div class="overlay">
             <div class="menu">
-                <a href="Profs.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">About</a>
-                <a href="Profs.html#contact">Contact</a>
+                <a href="index.html#contact">Contact</a>
             </div>
             <h1 class="heading">RESULTS TALK</h1>
             
