--- a/ProfsAbout.html
+++ b/ProfsAbout.html
@@ -9,7 +9,7 @@
     <!-- Include Font Awesome for hamburger icon -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <title>Your New Page</title>
+    <title>About</title>
     <style>
         body {
             margin: 0;
