--- a/ProfsAbout.html
+++ b/ProfsAbout.html
@@ -176,6 +176,10 @@
             <a href="https://www.instagram.com/?hl=en" class="text-white hover:text-pink-500">
                 <i class="fab fa-instagram text-xl"></i>
             </a>
+
+             <a href="https://www.linkedin.com/in/teddy-makwela-0589bb2ba/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="text-white hover:text-blue-500">
+                <i class="fab fa-linkedin-in text-xl"></i>
+            </a> 
             <!-- Add more social media icons as needed -->
         </div>
         <img src="20240318_142023_0000.webp" alt="Logo" class="mx-auto mt-4" style="max-width: 100px;">
